--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -25,7 +25,7 @@
                     </li>
                     {% endif %}{% endfor %}
                     <li>
-                        <a href="http://www.oulongxing.com">Is Me</a>
+                        <a href="http://www.oulongxing.com" target="_blank" >Is Me</a>
                     </li>
                 </ul>
             </div>
